--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 asgiref==3.5.0
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
 certifi==2021.10.8
 cloudinary==1.29.0
+confusable-homoglyphs==3.2.0
 Django==4.0.4
+django-bootstrap4==3.0.1
+django-crispy-forms==1.14.0
+django-registration==3.2
+djangorestframework==3.12.4
+Pillow==9.1.0
+pytz==2022.1
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 urllib3==1.26.9
+whitenoise==6.0.0
