--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-bootstrap4==3.0.1
 django-crispy-forms==1.14.0
 django-registration==3.2
 djangorestframework==3.12.4
+gunicorn==20.1.0
 Pillow==9.1.0
 pytz==2022.1
 six==1.16.0
