--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@ beautifulsoup4==4.11.1
 certifi==2021.10.8
 cloudinary==1.29.0
 confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==4.0.4
 django-bootstrap4==3.0.1
 django-crispy-forms==1.14.0
+django-heroku==0.3.1
 django-registration==3.2
 djangorestframework==3.12.4
 gunicorn==20.1.0
 Pillow==9.1.0
+psycopg2==2.9.3
 pytz==2022.1
 six==1.16.0
 soupsieve==2.3.2.post1
