--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ djangorestframework==3.12.4
 gunicorn==20.1.0
 Pillow==9.1.0
 psycopg2==2.9.3
+python-decouple==3.6
 pytz==2022.1
 six==1.16.0
 soupsieve==2.3.2.post1
